--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -10,7 +10,7 @@ html, body{
 .stage{
   position: relative;
   width: 100%;
-  height: 680px;
+  height: 900px;
 }
 .img-sec{
   position: relative;
@@ -23,7 +23,51 @@ html, body{
   position: absolute;
   left: 0;
   bottom: 30px;
-  z-index: 101;
+  z-index: 10;
   width: 100%;
   text-align: center;
+}
+.img-figure{
+  position: absolute;
+  width: 320px;
+  height: 360px;
+  margin: 0;
+  padding: 40px;
+  box-sizing: border-box;
+  background-color: #fff;
+  cursor: pointer;
+  transform-origin: 0 50% 0;
+  transform-style: preserve-3d;
+  transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
+}
+.is-inverse{
+  transform: translate(320px) rotateY(180deg);
+}
+figcaption {
+  text-align: center;
+}
+figcaption .img-title{
+  margin: 20px 0 0 0;
+  color: #a7a0a2;
+  font-size: 16px;
+}
+.img-back{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  padding: 50px 40px;
+  overflow: auto;
+  color: #a7a0a2;
+  font-size: 22px;
+  line-height: 1.25;
+  text-align: left;
+  background-color: #fff;
+  box-sizing: border-box;
+  transform: rotateY(180deg) translateZ(1px);
+  backface-visibility: hidden;
+}
+.img-back p{
+  margin: 0;
 }
