--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,3 +1,7 @@
+@font-face{
+  font-family: "icons-turn-arrow";
+  src: url("../fonts/icons/turn-arrow.eot") format("embedded-opentype"),url("../fonts/icons/turn-arrow.woff") format("woff"),url("../fonts/icons/turn-arrow.ttf") format("truetype"),url("../fonts/icons/turn-arrow.svg") format("svg");
+}
 html, body{
   width: 100%;
   height: 100%;
@@ -39,6 +43,7 @@ html, body{
   transform-origin: 0 50% 0;
   transform-style: preserve-3d;
   transition: transform .6s ease-in-out, left .6s ease-in-out, top .6s ease-in-out;
+  z-index: 10;
 }
 .is-inverse{
   transform: translate(320px) rotateY(180deg);
@@ -70,4 +75,34 @@ figcaption .img-title{
 }
 .img-back p{
   margin: 0;
+}
+.controller-unit{
+  display: inline-block;
+  width: 30px;
+  height: 30px;
+  margin: 0 5px;
+  text-align: center;
+  cursor: pointer;
+  background-color: #aaa;
+  border-radius: 50%;
+  transform: scale(0.5);
+  vertical-align: middle;
+  transition: transform .6s ease-in-out,background-color .3s;
+}
+.controller-unit.is-center{
+  background-color: #888;
+  transform: scale(1);
+}
+.controller-unit.is-center::after{
+  color: #fff;
+  line-height: 30px;
+  font-family: "icons-turn-arrow";
+  font-size: 80%;
+  content: "\e600";
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-smoothing: grayscale;
+}
+.controller-unit.is-inverse{
+  background-color: #555;
+  transform: rotateY(180deg);
 }
